tests/compile_failures/events/invalid_list_values.rs
use dioxus_sugar::events;

#[events(list(onclick, "onkeypress"))]
struct Props {}

fn main() {}