tests/compile_failures/events/invalid_list_values.stderr
error: not a valid event
 --> tests/compile_failures/events/invalid_list_values.rs:3:10
  |
3 | #[events(list(onclick, "onkeypress"))]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
